# AlgoNest

./: .flake8  .gitignore  ALGONEST_API.md  API_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
algonest/: __init__.py
algonest/arrays/: __init__.py  dutch_flag.py  intervals.py  kadane.py  matrix.py  next_permutation.py  prefix_sum.py  reverse.py  rotate.py  sliding_window.py  two_pointers.py
algonest/backtracking/: __init__.py  combinations.py  permutations.py  subsets.py
algonest/dynamic_programming/: __init__.py  coin_change.py  edit_distance.py  fibonacci.py  grid_dp.py  knapsack.py  lcs.py  lis.py  matrix_chain.py  subset_dp.py
algonest/graphs/: __init__.py  bellman_ford.py  bfs.py  bipartite.py  cycle_detection.py  dfs.py  dijkstra.py  dsu.py  floyd_warshall.py  kruskal.py  prim.py  representation.py  scc.py  topological_sort.py
algonest/greedy/: __init__.py  algorithms.py
algonest/heap/: __init__.py  k_elements.py  k_way_merge.py  max_heap.py  median_finder.py  min_heap.py  priority_queue.py
algonest/linked_list/: __init__.py  circular.py  cycle.py  doubly.py  lru_cache.py  node.py  operations.py  singly.py
algonest/math/: __init__.py  bit_manipulation.py  combinatorics.py  fast_power.py  gcd_lcm.py  matrix_math.py  modular_arithmetic.py  prime_sieve.py  statistics.py
algonest/nodes/: __init__.py  graph_node.py  list_node.py  tree_node.py  trie_node.py
algonest/search/: __init__.py  advanced_search.py  binary_search.py
algonest/sort/: __init__.py  advanced_sorting.py  sorting.py
algonest/stack_queue/: __init__.py  circular_queue.py  deque.py  expression.py  min_stack.py  monotonic_stack.py  queue.py  stack.py
algonest/strings/: __init__.py  anagram.py  kmp.py  rabin_karp.py  trie.py  utilities.py  z_algorithm.py
algonest/trees/: __init__.py  avl_tree.py  binary_tree.py  bst.py  construction.py  fenwick_tree.py  lca.py  node.py  paths.py  properties.py  segment_tree.py  traversals.py  trie.py  views.py
algonest/utils/: __init__.py  debug.py  fast_io.py  test_runner.py  type_helpers.py  validators.py
benchmarks/: compare_algorithms.py
docs/: Project Structure.md
tests/: conftest.py
tests/arrays/: test_dutch_flag.py  test_intervals.py  test_kadane.py  test_matrix.py  test_next_permutation.py  (+5 more)
(+61 files in other folders)
