[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algonest"
version = "0.1.0"
description = "Lightweight DSA utilities for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Varun K S" }]
keywords = ["dsa", "algorithms", "data-structures", "python", "interview"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Education",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/algonest"
Repository = "https://github.com/your-org/algonest"
Issues = "https://github.com/your-org/algonest/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=6.0",
]

[tool.setuptools.packages.find]
include = ["algonest*"]
