[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algonest"
version = "0.1.2"
description = "Lightweight DSA utilities for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Varun K S" }]
keywords = ["dsa", "algorithms", "data-structures", "python", "interview"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Education",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/varunks04/AlgoNest"
Repository = "https://github.com/varunks04/AlgoNest"
Issues = "https://github.com/varunks04/AlgoNest/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8>=6.0",
]

[tool.setuptools.packages.find]
include = ["algonest*"]
